fixed typo in css file

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="box"></div>
       <div class="box"></div>
       <div class="box"></div>
-      <div class="box large">
+      <div class="box-large">
         <div class="green-triangle-image-container">
           <img
             class="green-triangle-image"
